# python-lcms2

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
src/lcms2/: __init__.py  _lcms2.c  definitions.h  implementation.py  profile.h  transform.h  white_point.h
tests/: test_builtin_profiles.py  test_profile_file_io.py  test_profile_memory_io.py  test_readme_examples.py  test_rgb_profiles.py  test_transforms.py  test_white_point.py
tools/: save_srgb.py
