[build-system]
requires = ["setuptools>=61.0", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-lcms2"
version = "0.1.2"
authors = [
    { name = "Josue N Rivera", email = "josuevaldez1.com@gmail.com" },
]
description = "Python binding for LittleCMS2 library"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    'Programming Language :: C',
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
'Topic :: Multimedia :: Graphics :: Graphics Conversion'
]
keywords = ["color management", "lcms2", "icc", "color profile", "colorspace"]
dependencies = ["numpy>=2.0"]

[project.urls]
"Homepage" = "https://github.com/wzjoriv/python-lcms2"
"Bug Tracker" = "https://github.com/wzjoriv/python-lcms2/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = ["cp310-win_arm64"]
build-frontend = "build"

